conection with planetscale

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@planetscale/database": "^1.11.0",
     "next": "13.5.5",
     "react": "^18",
     "react-dom": "^18",
