variables de entorno

--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 NEXT_PUBLIC_URL = /api/products/
+DATABASE = ecommerce
+HOST = aws.connect.psdb.cloud
+USERNAME = ukf3tdfj3521lonqur3a
+PASSWORD =  pscale_pw_2ggiWRLRKpkJqz2k8Q7csKoJGmIPGJJ2hUHzaKlj7rl
+
