--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 NEXT_PUBLIC_URL = /api/products/
 PLANETSCALE_DB = ecommerce
 PLANETSCALE_DB_HOST = aws.connect.psdb.cloud
-PLANETSCALE_DB_USERNAME = qpw1r9e3c88cq7g3dfdt
-PLANETSCALE_DB_PASSWORD = pscale_pw_u2Hh7BXG172K3leNMF6T7waHb6C04z1wb2NNTjdA6Vc
+PLANETSCALE_DB_USERNAME = 888hp2kq9n7iw89dalyx
+PLANETSCALE_DB_PASSWORD = pscale_pw_3reZjP8Q9CTJH4YMLmAX3twBKzYdyC86d2Q2yz4OGVB
 
